Corrected spacing on select elements

--- a/css/fusioncss.blue.pink.css
+++ b/css/fusioncss.blue.pink.css
@@ -1457,7 +1457,6 @@ form dd:last-child {
 .floatingLabels form .selectControl {
   position: relative;
   z-index: 1;
-  margin-bottom: 1rem;
 }
 .floatingLabels form .selectControl:after {
   content: "\f078";
