--- a/less/forms.less
+++ b/less/forms.less
@@ -251,7 +251,6 @@ form {
 		.selectControl {
 			position: relative;
 			z-index: 1;
-			margin-bottom: 1rem;
 
 			&:after {
 				content: "\f078"; // Fontawesome chevron down
